--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,1 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<% if current_user %>
-  Signed in as <%= current_user.login %>
-  <%= link_to "Sign out", logout_path %>
-<% else %>
-<%= link_to "Sign in", new_user_session_path %>
-<% end %>
+<h1>Welcome to Codroo.com</h1>
