Decided to stop making the Validator work and not use it at all

--- a/app/views/codroos/show.html.erb
+++ b/app/views/codroos/show.html.erb
@@ -1,4 +1,5 @@
 <% notice %>
 <h1><%= @codroo.name %></h1>
 <div><%= @codroo.description %></div>
-
+<%= render :partial => "messages/messages",:collection => @codroo.messages %>
+<%= render "messages/form" %>
